# pycanlii

./: CLAUDE.md  README.md  pyproject.toml
src/pycanlii/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_client_base.py  test_client_cases.py  test_client_citator.py  test_client_legislation.py  test_exceptions.py  test_models_cases.py  test_models_legislation.py  test_package.py
