[project]
name = "pycanlii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jostein Thorbjornsen", email = "jostein@wthorbjo.net" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pycanlii = "pycanlii:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.35",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
